--- a/sd/notebooks/rough_work.ipynb
+++ b/sd/notebooks/rough_work.ipynb
@@ -237,6 +237,98 @@
    "source": [
     "torch.linspace(0, train_step, new, dtype=torch.int64).__reversed__()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var = alpha_cumprod[timesteps] ** 0.5\n",
+    "        var = var.flatten()\n",
+    "\n",
+    "        while len(var.shape) < len(original_samples.shape):\n",
+    "            var = var.unsqueeze(-1)\n",
+    "        \n",
+    "        sqrt_one_minus_var = (1 - var) ** 0.5 # Basically std\n",
+    "\n",
+    "        while len(sqrt_one_minus_var.shape) < len(original_samples.shape):\n",
+    "            sqrt_one_minus_var = sqrt_one_minus_var.unsqueeze(-1)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1, 2, 3, 1, 2, 3])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "var = torch.tensor([[1,2,3],[1,2,3]])\n",
+    "var.flatten()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([4, 3])\n",
+      "torch.Size([1, 2, 3, 2])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 2, 3, 2])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "var = torch.tensor([[1,2,3],[1,2,3],[1,2,3],[1,2,3]])\n",
+    "var.flatten()\n",
+    "print(var.shape)\n",
+    "\n",
+    "var = var.reshape([1, 2, 3, 2])\n",
+    "print(var.shape)\n",
+    "\n",
+    "var_2 = (1- var) ** 0.5\n",
+    "var_2.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
