--- a/sd/training.ipynb
+++ b/sd/training.ipynb
@@ -22,7 +22,8 @@
     "from config import initial_transforms\n",
     "from utils import unnormalize, show_some, generate_context\n",
     "from dataset import ImageDataset\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from pipeline import rescale"
    ]
   },
   {
@@ -164,6 +165,13 @@
     "orignal_image = inv_norm_original[0].permute(1,2,0)\n",
     "noise_added = noise[0].permute(1,2,0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
